# UWU-Blobfish

./: .gitignore  .gitmodules  .isaac_ros_common-config  .pre-commit-config.yaml  README.md  ROS_README.md  activate.sh  arduino_interface.py  launch-all.py  publish_motor.sh  push2robot.sh  requirements.txt  save_pid_params.sh  setup.sh  sim_useful_links.md
.devcontainer/: compose..yaml  compose.Windows_NT.yaml  compose.yaml  devcontainer.json
.devcontainer/hooks/: initialize.sh  postCreate.sh  postStart.sh
arduino/: .gitignore  Doxyfile  README.md  arduino.ino  arduino_error_blinker.h  arduino_error_codes.h  arduino_jetson_interface.h  jetson_interface.ino
arduino/latex/: annotated.tex  classArdJetInterface.tex  classErrorBlinker.tex  md_README.tex  refman.tex
arduino/main/: main.ino
arduino/motor_test/: motor_test.ino
arduino/source/: conf.py  index.rst
arduino/xml/: README_8md.xml  arduino__error__blinker_8h.xml  arduino__jetson__interface_8h.xml  classArdJetInterface.xml  classErrorBlinker.xml  conf_8py.xml  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.xml  index.xml  md_README.xml  namespaceconf.xml
docker/: 99-arduino.rules  99-imu.rules  Dockerfile.arduino  Dockerfile.fixes  Dockerfile.gazebo  Dockerfile.misc  Dockerfile.rqt  Dockerfile.udev  Dockerfile.uwu  README.md
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: README.md  activate.sh  build.sh  install.sh  routines.sh  teleop.sh  tmux.sh
scripts/install.d/: 00-misc.sh  00-template.sh  00-udev.sh  01-enable-apt-repos.sh  01-udev.sh  02-enable-apt-repos.sh  03-misc.sh  05-useful-utils.sh  10-install-mesa.sh  10-install-ros.sh  11-install-gz.sh  11-install-ros.sh  12-install-arduino.sh  12-install-gz.sh  20-useful-utils.sh  25-wsl-specific.sh
src/arduino_bridge/: arduino  package.xml  setup.py
src/blobfish_control/: package.xml  setup.cfg  setup.py
src/blobfish_cv/: README.md  package.xml  params.yaml  params_gate.yaml  params_redrod.yaml  (+4 more)
src/blobfish_sim/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/blobfish_sim/blobfish_sim/: arduino.py  base_bridge.py  depth.py  game.py  imu.py  keypress.py  keypress_bridge.py  pos_imu.py  sim_bridge.py
src/blobfish_sim/config/: bridge.yaml
src/blobfish_sim/launch/: launch.py
src/debug_cv/: package.xml  setup.cfg  setup.py
src/debug_cv/debug_cv/: play_vid.py  record_vid.py
src/debug_cv/launch/: test.launch.py
src/debug_cv/test/: main.py
src/sauvc_2024/beluga_hardware/: CMakeLists.txt  package.xml
src/sauvc_2024/beluga_hardware/scripts/: motor_offsets.py  publish_key.py  thruster_manager.py
src/uwu_sim/: .gitignore  CMakeLists.txt  README.md  TODO.md  glide_test.sh  package.xml  stop_all.sh
src/uwu_sim/config/: bridge.yaml
src/uwu_sim/hooks/: gazebo.dsv.in  gazebo.sh.in
src/uwu_sim/launch/: launch.py  pool_world.launch.py  robot.launch.py  sea.launch.py  xacro.launch.py
src/uwu_sim/models/blobfish_chassis/: model.config  model.sdf
src/uwu_sim/models/blobfish_chassis/meshes/battery_box_1/: body1_visual.mtl
src/uwu_sim/models/blobfish_chassis/meshes/internal_1/: body1_visual.mtl
src/uwu_sim/models/blobfish_chassis/meshes/tube_1/: body1_visual.mtl
src/uwu_sim/models/blue_drum/: model.config
src/uwu_sim/models/gate/: model.config  model.sdf
src/uwu_sim/models/red_drum/: model.config
src/uwu_sim/models/simple_thruster/: README.md  model.config  model.sdf
src/uwu_sim/models/simple_thruster/meshes/motor_1/: body2_visual.mtl
src/uwu_sim/models/swimming_pool/: model.config  model.sdf
src/uwu_sim/models/wood_cube/: model.config  model.sdf
src/uwu_sim/models/yellow_flare/: model.config  model.sdf
src/uwu_sim/robots/beluga/xacro/: beluga_base.xacro  beluga_default.xacro  beluga_sensors.xacro  beluga_thrusters.xacro  imu_snippets.xacro  pressure_snippets.xacro  thruster_snippets.xacro
src/uwu_sim/robots/blobsimp/: .gitignore  README.md  model.config  model.sdf.xacro  model.urdf.xacro
src/uwu_sim/robots/blobsimp/meshes/shroud_1/: body1_visual.mtl
src/uwu_sim/robots/blobsimp/xacro/: chassis.sdf  thruster.sdf
src/uwu_sim/robots/car_robot/: model.config  model.sdf
src/uwu_sim/robots/car_robot/meshes/castor_wheel_1/: castor_wheel_visual.mtl
src/uwu_sim/robots/car_robot/meshes/chassis_1/: chassis_visual.mtl
src/uwu_sim/robots/car_robot/meshes/r_wheel_1/: r_wheel_visual.mtl
src/uwu_sim/worlds/: gui_plugin_blobfish.sdf  gui_plugin_common.sdf  pool_world.sdf  sys_plugin_blobfish.sdf  sys_plugin_common.sdf  test_floor.sdf  test_sea.sdf  tutorial_building_robot.sdf  world_pool.sdf.xacro
uwu_main/: .gitignore  README.md  launch-all.py  launch.py
(+573 files in other folders)
