<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blobfish_sim</name>
  <version>0.0.0</version>
  <description>ROS2 Gazebo Bridge Nodes</description>
  <maintainer email="42513874+Interpause@users.noreply.github.com">vscode</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>blobfish_msgs</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
