<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>debug_cv</name>
  <version>0.0.0</version>
  <description>Record camera and other stuff</description>
  <maintainer email="42513874+Interpause@users.noreply.github.com">jh2xl</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-imutils-pip</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
